...
                android:theme="@style/toolbarTheme"></androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <fragment
            android:id="@+id/locationFragment"
            android:name="com.example.concordia_campus_guide.fragments.LocationFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_card_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/explore_bottom_card_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="false"
            app:behavior_peekHeight="70dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/explore_bottom_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

        <androidx.core.widget.NestedScrollView
...
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="true"
            app:behavior_peekHeight="140dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/bottom_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
